<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.udacityabndsinglescreenapp.MainActivity">

    <ImageView
        android:id="@+id/boba_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="center"
        android:src="@drawable/bubbletea" />

    <TextView
        android:id="@+id/text_store"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/boba_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/store_name" />

    <TextView
        android:id="@+id/text_address"
        style="@style/FontInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_store"
        android:layout_centerHorizontal="true"
        android:text="@string/address" />

    <TextView
        android:id="@+id/text_city"
        style="@style/FontInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_address"
        android:layout_centerHorizontal="true"
        android:text="@string/city" />

    <TextView
        android:id="@+id/text_phone"
        style="@style/FontInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_city"
        android:layout_centerHorizontal="true"
        android:text="@string/phone" />

    <TextView
        android:id="@+id/text_hours"
        style="@style/FontDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/hours" />

    <TextView
        android:id="@+id/text_description"
        style="@style/FontDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/description" />



</RelativeLayout>
